fix(admin): use visibility instead of opacity to hide elements

--- a/_sass/_admin.scss
+++ b/_sass/_admin.scss
@@ -8,8 +8,8 @@
 
 }
 
-.opacity0 {
-  opacity: 0;
+.invisible {
+  visibility: hidden;
 }
 
 .admin_panel__header {
